--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 .DS_Store
+Hifdh Tracker.xcworkspace/xcuserdata/owaisquadri.xcuserdatad/UserInterfaceState.xcuserstate
+Hifdh Tracker.xcworkspace/xcuserdata/owaisquadri.xcuserdatad/xcschemes/xcschememanagement.plist
