--- a/Hifdh Tracker/Info.plist
+++ b/Hifdh Tracker/Info.plist
@@ -2,8 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.hifdh-tracker</string>
+		</dict>
+	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>NSExtensionFileProviderDocumentGroup</key>
+	<string>com.HifdhTracker</string>
 	<key>NSUserNotificationsUsageDescription</key>
 	<string>Allows this app to send user a notification when the counter is complete.</string>
 	<key>UIApplicationSceneManifest</key>
